--- a/css/layout1.css
+++ b/css/layout1.css
@@ -112,3 +112,7 @@ header{
     box-shadow: 10px 10px 10px #15407598;
     color:#ffffff; 
 }
+.video1{
+    display: flex;
+    flex-direction: column;
+}
