--- a/css/layout1.css
+++ b/css/layout1.css
@@ -113,6 +113,7 @@ header{
     color:#ffffff; 
 }
 .video1{
+    width: 50%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
