--- a/css/layout4.css
+++ b/css/layout4.css
@@ -117,7 +117,6 @@ header{
     box-shadow: 10px 10px 10px #15407598;
     color:#ffffff;
     padding-right: 5%;
-    text-align: center;
 }
 .localiz{
     background-color: #4c9ce7;
@@ -162,3 +161,7 @@ header{
     left: 27%;
     display: flex;
 }
+.iframe{
+    width: 50%;
+}
+
